--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tlayout"
-        app:layout_constraintBottom_toTopOf="@+id/bnb"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNV"
         />
         
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bnb"
+        android:id="@+id/bottomNV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
