--- a/app/src/main/res/layout/fragment_blog.xml
+++ b/app/src/main/res/layout/fragment_blog.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BlogFragment">
+    tools:context=".features.blog.BlogFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
