--- a/app/src/main/res/layout/recipe_input_dialog.xml
+++ b/app/src/main/res/layout/recipe_input_dialog.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:text="Add new recipe"
-        android:textSize="40px"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
