--- a/app/src/main/res/layout/fragment_blog.xml
+++ b/app/src/main/res/layout/fragment_blog.xml
@@ -5,20 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".features.blog.BlogFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvBlog"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Blog Fragment" />
-
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_margin="0dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/profile"
-        android:background="@drawable/circular_background"
-        />
+        android:layout_height="match_parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
