--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".features.contact.ContactFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvContact"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Contact Fragment" />
-
+        android:layout_height="match_parent"/>
 </FrameLayout>
