--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="150px"
-        android:hint="email"
+        android:hint="email*"
         android:minHeight="48dp"
         app:layout_constraintTop_toBottomOf="@+id/tvLogin"
         tools:layout_editor_absoluteX="8dp" />
@@ -30,7 +30,7 @@
     <EditText
         android:id="@+id/etPassword"
         android:layout_marginTop="20px"
-        android:hint="password"
+        android:hint="password*"
         android:minHeight="48dp"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@+id/etEmail"
