--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -5,7 +5,8 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_marginVertical="3dp"
+    android:layout_marginHorizontal="5dp">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -17,7 +18,7 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:contentDescription=""
-            android:src="@drawable/profile" />
+            android:src="@drawable/logo" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,6 +35,7 @@
 
             <TextView
                 android:id="@+id/tvIngredients"
+                android:layout_marginTop="3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
@@ -41,7 +43,7 @@
 
             <TextView
                 android:id="@+id/tvInstruction"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
