--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,6 +52,7 @@
         android:layout_marginTop="20px"
         android:hint="password*"
         android:minHeight="48dp"
+        android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
