--- a/app/src/main/res/layout/blog_post_input_dailog.xml
+++ b/app/src/main/res/layout/blog_post_input_dailog.xml
@@ -3,12 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30px"
+    android:padding="25dp"
     >
 
     <TextView
         android:text="Add blog post"
-        android:textSize="20dp"
+        android:textSize="25dp"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -18,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Caption"
+        android:textSize="15dp"
         android:minHeight="48dp" />
 
     <EditText
@@ -26,14 +28,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Content"
+        android:textSize="15dp"
         android:inputType="textMultiLine"
         android:minLines="3"
         android:minHeight="48dp" />
 
-    <Button
-        android:id="@+id/btnAdd"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_marginTop="30px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add"/>
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:backgroundTint="@color/grey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Cancel"/>
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/btnAdd"
+            android:layout_weight="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add"/>
+    </LinearLayout>
+
 </LinearLayout>
